Copy-Konstruktoren von DNA und Genome liefert jetzt echte Klone (deep copy). Deshalb konnte die Flusssteuerung per Mutex eliminiert werden. DNA-Mutation von Breeder::mutate() nach DNA::mutate() verlagert. Neue Startverteilung (scattered w/ color hint).

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,2 @@
 [ ] Die gespeicherte DNA (SVG) entspricht optisch manchmal nicht dem dargestellten generierten Bild.
+[ ] Wenn die eingestellten Speicherverzeichnisse nicht vorhanden sind, Meldung ausgeben und den Nutzer zum Einstellungsdialog dirigieren
