SVGReader aufgeräumt und weitere Fehlerbehandlungen eingebaut.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
-[ ] Die gespeicherte DNA (SVG) entspricht optisch manchmal nicht dem dargestellten generierten Bild.
 [ ] Wenn die eingestellten Speicherverzeichnisse nicht vorhanden sind, Meldung ausgeben und den Nutzer zum Einstellungsdialog dirigieren
 [ ] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
+[ ] Log schreiben (Zeitstempel, Generation, Selected, Points, Genomes, Fitness)
+[?] Die gespeicherte DNA (SVG) entspricht optisch manchmal nicht dem dargestellten generierten Bild.
