Dem Reset-to-defaults-Knopf in Options/Evolution Leben eingehaucht.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,16 @@
 BUGS
 
 [ ] Umschalten der Prozesspriorität lässt Programm einfrieren
+[ ] Beenden des Programms, während die Generierung läuft, lässt das Programm einfrieren. Manchmal geschieht das auch, selbst wenn der Hintergrundthread nicht aktiv ist.
+[ ] Die Anwendung wird mit einem Default-Icon auf dem Desktop abgezeigt, nicht mit dem in der RC-Datei angegebenen.
+[ ] Die Lokalisierungen werden nicht eingebunden.
 
 FEATURES
 
 [ ] Wenn die eingestellten Speicherverzeichnisse nicht vorhanden sind, Meldung ausgeben und den Nutzer zum Einstellungsdialog dirigieren
+[ ] Optionen in XML-Datei speichern, nicht nur in Registry
 [?] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
+
+POSSIBLE SPEED-UPS
+
+[ ] Jedes Individuum (Klasse Individual) bekommt einen eigenen Zufallszahlengenerator, um Thread-übergreifende Speicherzugriffe auf das globale MersenneTwister-Objekt zu verhindern.
