--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,7 @@ BUGS
 
 FEATURES
 
+[ ] Gesamtzeit der bisherigen Berechnung anzeigen
 [ ] Optionen in XML-Datei speichern, nicht nur in Registry
 [?] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
 
