--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,18 @@
 BUGS
 
-[ ] Die Lokalisierungen werden nicht eingebunden.
-[ ] Startverteilung "tiled w/ color hint" füllt nicht die ganze Fläche aus.
+[ ] Warnung "QImage::pixel: coordinate (x,y) out of range" in Breeder::populate() wegen Polygonen, die außerhalb des Bildes liegen.
+[ ] Neu erzeugte Punkte sollen sich auf der konvexen Hülle des betreffenden Polygons befinden.
 [ ] Umschalten der Prozesspriorität lässt Programm einfrieren
 [ ] Die Anwendung wird mit einem Default-Icon auf dem Desktop abgezeigt, nicht mit dem in der RC-Datei angegebenen.
 
 FEATURES
 
 [ ] Klick ins GenerationWidget zerteilt das Genom an der angeklickten Position.
-    http://www.scribd.com/doc/99436807/The-Algorithm-Design-Manual#page=579
-    http://www.scribd.com/doc/99436807/The-Algorithm-Design-Manual#page=583
 [ ] Werte der RGBA/xy-Schieber aus DNA-Datei auslesen und Schieber darauf einstellen.
 [ ] Werte der RGBA/xy-Schieber in GUI anzeigen.
 [ ] Optionen in XML-Datei speichern, nicht nur in Registry
 [?] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
+[ ] Lokalisierungen aus Ressourcendatei einbinden.
 
 POSSIBLE SPEED-UPS
 
