--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 BUGS
 
+[ ] Keine Datei darf beim Speichern überschrieben werden
 [ ] Warnung "QImage::pixel: coordinate (x,y) out of range" in Breeder::populate() wegen Polygonen, die außerhalb des Bildes liegen.
 [ ] Umschalten der Prozesspriorität lässt Programm einfrieren
 [ ] Die Anwendung wird mit einem Default-Icon auf dem Desktop abgezeigt, nicht mit dem in der RC-Datei angegebenen.
