--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ BUGS
 
 FEATURES
 
+[ ] Liste zuletzt geöffneter Dateien (PNG, DNA) pflegen und über Datei-Menü zum Öffnen zur Verfügung stellen
 [ ] Optionen in XML-Datei speichern, nicht nur in Registry
 [ ] Werte der RGBA/xy-Schieber aus DNA-Datei auslesen und Schieber darauf einstellen.
 [?] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
