Neue Hilfsfunktion isConvexPolygon()

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,7 @@ FEATURES
 [ ] Optionen in XML-Datei speichern, nicht nur in Registry
 [ ] Werte der RGBA/xy-Schieber aus DNA-Datei auslesen und Schieber darauf einstellen.
 [?] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
+[?] GenerationWidget: markiertes Polygon löschen
 
 POSSIBLE SPEED-UPS
 
