Einstellungen lassen sich jetzt als XML-Datei speichern. Gespeichert wird ausschließlich als UTF-8 (auch SVG).

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@ BUGS
 
 FEATURES
 
-[+] Optionen in XML-Datei speichern, nicht nur in Registry
+[+] Optionen in XML-Datei speichern, nicht nur in Registry (bei der Gelegenheit aufräumen: MainWindow::saveAppSettings() -> BreederSettings::save())
 [ ] Werte der RGBA/xy-Schieber aus DNA-Datei auslesen und Schieber darauf einstellen.
 [?] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
 [?] GenerationWidget: markiertes Polygon löschen
