--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,7 @@ BUGS
 
 FEATURES
 
+[ ] Zeichnen der Polygone auf eine beliebig große Leinwand, um feine Auflösung zu erreichen. Dann Vergleich mit entsprechend hochskalierter Version des Originalbilds.
 [ ] Namen der DNA-Datei beim automatischen Speichern in Registry ablegen und beim nächsten Programmstart automatisch diese DNA einlesen.
 [?] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
 [?] GenerationWidget: markiertes Polygon löschen
