Internes Loggen und automatische Größenanpassung der Log-Einträge abschaltbar. Übersetzungen aktualisiert.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ BUGS
 
 FEATURES
 
+[ ] Hintergrundfarbe wählbar machen (Voreinstellung bleibt Weiß).
 [ ] Zeichnen der Polygone auf eine beliebig große Leinwand, um feine Auflösung zu erreichen. Dann Vergleich mit entsprechend hochskalierter Version des Originalbilds.
 [ ] Namen der DNA-Datei beim automatischen Speichern in Registry ablegen und beim nächsten Programmstart automatisch diese DNA einlesen.
 [?] R/G/B/A/xy-Regler automatisch anpassen, wenn Evolution stagniert
