OptionsForm: Mit der gewählten Mindestanzahl von Punkten pro Gen nicht mögliche Startverteilungen werden in der Auswahlliste ausgegraut.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,6 @@
 BUGS
 
-[ ] Startverteilung "Gekachelte Dreiecke" nur zulässig, wenn Mindestpunktzahl pro Polygon >= 3.
-[ ] Startverteilungen mit Kacheln nur zulässig, wenn Mindestpunktzahl pro Polygon >= 4.
-[ ] Gene::triangulize(): Bei Rechtecken entstehen zum Beispiel manchmal zwei *überlappende* Dreiecke.
+[ ] Gene::triangulize(): Bei Rechtecken entstehen manchmal zwei überlappende Dreiecke.
 
 FEATURES
 
